Feat: refactor routing configuration to use RouteLocator for improved clarity and add WebSocket support; update security configuration for reactive support